adapted for NB 10, 11